// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions 1`] = `
<ContextProvider>
  <ContextConsumer
    actions={
      Object {
        "increment": [Function],
      }
    }
    context="foo"
    initialState={
      Object {
        "n": 0,
      }
    }
  >
    <ContextChild
      actions={
        Object {
          "increment": [Function],
        }
      }
      context="foo"
      initialState={
        Object {
          "n": 0,
        }
      }
      setState={[Function]}
      state={
        Object {
          "foo": Object {
            "n": 0,
          },
        }
      }
    >
      <button
        onClick={[Function]}
      >
        0
      </button>
    </ContextChild>
  </ContextConsumer>
</ContextProvider>
`;

exports[`actions 2`] = `
<ContextProvider>
  <ContextConsumer
    actions={
      Object {
        "increment": [Function],
      }
    }
    context="foo"
    initialState={
      Object {
        "n": 0,
      }
    }
  >
    <ContextChild
      actions={
        Object {
          "increment": [Function],
        }
      }
      context="foo"
      initialState={
        Object {
          "n": 0,
        }
      }
      setState={[Function]}
      state={
        Object {
          "foo": Object {
            "n": 1,
          },
        }
      }
    >
      <button
        onClick={[Function]}
      >
        1
      </button>
    </ContextChild>
  </ContextConsumer>
</ContextProvider>
`;
